# czsc-rs

./: .gitignore  Cargo.toml  build.rs
crates/pyo3-weight-backtest/: Cargo.toml  README.md  pyproject.toml
crates/pyo3-weight-backtest/benches/: benchmarks.rs
crates/pyo3-weight-backtest/examples/: basic_usage.rs  demo.rs
crates/pyo3-weight-backtest/src/: analyzer.rs  calculator.rs  config.rs  constants.rs  engine.rs  errors.rs  lib.rs  models.rs  portfolio_builder.rs  processor.rs  stats.rs  trade_position.rs  types.rs  utils.rs
crates/pyo3-weight-backtest/src/engine/: data_processing.rs
crates/pyo3-weight-backtest/src/models/: daily_result.rs  performance_stats.rs  trade_pair.rs
crates/pyo3-weight-backtest/tests/: integration_tests.rs
