[package]
name = "pyo3-weight-backtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "weight_backtest_pyo3"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.24.2"
serde = { version = "1.0.219", features = ["derive"] }
pyo3-polars = "0.21.0"
polars = "0.48.1"

[features]
extension-module = ["pyo3/extension-module"]