[package]
name = "pyo3-weight-backtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "weight_backtest_pyo3"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.24.2"
serde = { version = "1.0.219", features = ["derive"] }
pyo3-polars = "0.21.0"
polars = { version = "0.48.1", features = ["full"] }
rayon = "1.10.0"
thiserror = "2.0.12"
serde_json = "1.0.140"
anyhow = "1.0.98"
chrono = "0.4.41"

[features]
extension-module = ["pyo3/extension-module"]