[package]
name = "pyo3-weight-backtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "weight_backtest_pyo3"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.25.1"
pyo3-polars = "0.22.0"
serde = { version = "1.0.219", features = ["derive"] }
polars = { version = "0.49.1", features = ["full", "cov"] }
rayon = "1.10.0"
thiserror = "2.0.12"
serde_json = "1.0.140"
anyhow = "1.0.98"
chrono = "0.4.41"
polars-ops = { version = "0.49.1", features = ["pivot"] }
indicatif = "0.18.0"

[dev-dependencies]
criterion = "0.7.0"
flame = "0.2.2"

[features]
extension-module = ["pyo3/extension-module", "pyo3/abi3-py310"]

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false
